<resources>
    <string name="app_name">MyNews</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- sheets for tablayout -->
    <string-array name="list_tab">
        <item>"TOP STORIES"</item>
        <item>"MOST POPULAR"</item>
        <item>"TRAVEL"</item>
    </string-array>

    <!-- Menu for toolbar -->
    <string name="MyNews">MyNews</string>
    <string name="Search_articles">Search Articles</string>
    <string name="Notifications">Notifications</string>
    <string name="About">About</string>
    <string name="Help">Help</string>
    <string name="Search_query_term">Search query term</string>
    <string name="Begin_Date">Begin Date</string>
    <string name="End_Date">End Date</string>
    <string name="Enable_notifications">Enable notifications (once per day)</string>
    <string name="SEARCH">SEARCH</string>

    <!-- Checkbox -->
    <string name="arts">Arts</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="travel">Travel</string>

    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="checkbox_travel">Travel</string>

    <!-- settings for tab travel -->
    <string name="search_query_term">Search query term</string>
    <string name="search_cap">SEARCH</string>
    <string name="interest_tab">TRAVEL</string>
    <string name="query_interest">travel</string>

    <!-- items for date selection -->
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="APIkey">225a8498a05b4b7bb4d085d0c32e4ce8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base_setting">BaseSettingActivity</string>
    <string name="image_news">Image News</string>
    <string name="icon_notif_choosing">icon_notif_choosing</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="icon_for_search_request">icon_for_search_request</string>
    <string name="icon_navigation_drawer">icon_navigation_drawer</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="search_articles">Search articles</string>
    <string name="specifyAtLeastOneCategory">Please specify at least one category to search</string>
    <string name="enterAtLeastOneTerm">Please enter at least one term in the search bar</string>
    <string name="how_can_we_help_you">How can we help you ?</string>
    <string name="help">Help</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="most_frequent_question">Most frequent question</string>
    <string name="how_to_use_mynews">How to use MyNews ?</string>
    <string name="how_to_update_mynews">How to update MyNews ?</string>
    <string name="could_not_read_the_article">Could not read the article ?</string>
    <string name="contact">Contact</string>
    <string name="customer_service">customer service</string>
    <string name="haisvincentapb_hotmail_com">haisvincentapb@hotmail.com</string>
    <string name="_06_19_41_01_92">06 19 41 01 92</string>
    <string name="mynews">MyNews</string>
    <string name="for_android">for Android</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="created_by_vincent_hais">Created by Vincent Hais</string>
    <string name="mynews_for_android">MyNews for Android</string>
    <string name="is_built_from_open_source_software_androidstudio">is built from open source software: AndroidStudio</string>
    <string name="LoadingProgress">Loading...</string>
    <string name="errorRequest">error request</string>
    <string name="television">Television</string>
    <string name="automobiles">Automobiles</string>
    <string name="food">Food</string>
    <string name="media">Media</string>
    <string name="weather">Weather</string>
    <string name="configuration">Configuration</string>
    <string name="notifications">Notifications</string>
    <string name="technology">Technology</string>
    <string name="movies">Movies</string>
    <string name="sciences">Sciences</string>
    <string name="books">Books</string>
    <string name="world">World</string>
    <string name="magazine">Magazine</string>
    <string name="sports">Sports</string>

</resources>