<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:id="@+id/checkbox_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/search_cb_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:tag="@string/checkbox_arts"/>

        <CheckBox
            android:id="@+id/search_cb_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:tag="@string/checkbox_business"/>

        <CheckBox
            android:id="@+id/search_cb_entrepreneurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrepreneurs"
            android:tag="@string/checkbox_entrepreneurs"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/search_cb_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            android:tag="@string/checkbox_politics"/>

        <CheckBox
            android:id="@+id/search_cb_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:tag="@string/checkbox_sports"/>

        <CheckBox
            android:id="@+id/search_cb_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            android:tag="@string/checkbox_travel"/>

    </LinearLayout>
</LinearLayout>