<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".Controllers.Activities.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26C4EC">

        <ImageButton
            android:id="@+id/image_button_search_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_key_white"
            android:background="#26C4EC"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_articles"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:textColor="#FFFFFF" />



    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/query_include"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Search_query_term"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColorLink="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_begin_date_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/search_begin_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/begin_date"
                android:inputType="date"
                android:textColorLink="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_end_date_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/search_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/end_date"
                android:inputType="date"
                android:textColorLink="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <include layout="@layout/search_checkboxes"
        android:id="@+id/cb_include"/>

    <Button
        android:id="@+id/search_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/search_cap"
        android:textColor="@android:color/white"
        android:textColorLink="@color/colorPrimaryDark" />
</LinearLayout>